# vllm_service

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml
dev/journals/: codex.md
dockerfiles/: vllm-hack.dockerfile
examples/: config.multi-model.yaml
examples/single-node/: README.md  config.yaml  models.yaml
recipies/: compose_qwen35_122b_4x96GB.md
scripts/: bootstrap.sh  bootstrap_k3s.sh  example_tune.sh  install_kubeai.sh  join_agent.sh  smoke_test.sh
tests/: test_cli_setup.py  test_serving_profiles.py
vllm_service/: benchmark.py  catalog.py  cli.py  cli_scfg.py  config.py  contracts.py  docker_utils.py  env_utils.py  exporters.py  hardware.py  kubeai_ops.py  profile_runtime.py  renderer.py  resolver.py  tuning.py  validator.py  verification.py
vllm_service/backends/: __init__.py  compose_renderer.py  kubeai_renderer.py
vllm_service/experimental/: model_catalog_discover.py  model_memory_estimator.py
vllm_service/templates/: benchmark_prompts.json  default-models.yaml  default-profiles.yaml  docker-compose.yml.j2  litellm_config.yaml.j2
